--- a/grapl-cdk/edge_ux/index.html
+++ b/grapl-cdk/edge_ux/index.html
@@ -1,24 +1,27 @@
-<!doctype html>
-<html class="no-js" lang="">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Lenses</title>
-    <meta name="description" content="spooky">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!--<link rel="manifest" href="site.webmanifest">-->
-    <!--<link rel="apple-touch-icon" href="icon.png">-->
-    <!-- Place favicon.ico in the root directory -->
-
+    <meta charset="UTF-8">
 </head>
-
 <body>
-<h1>Lenses</h1>
-<div id="LenseTable"></div>
 
-<script src="index.js"></script>
+    <div>
+
+            <div class="container">
+                <label for="uname"><b>Username</b></label>
+                <input type="text" placeholder="Enter Username" id="uname" required>
+
+                <label for="psw"><b>Password</b></label>
+                <input type="password" placeholder="Enter Password" id="psw" required>
+
+                <button type="submit" id="submitbtn">Login</button>
+            </div>
+    </div>
+
+    <script type="text/javascript"
+            src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+    <script defer type="module" src="index.js" ></script>
 
 </body>
-
+</html>
