--- a/grapl-cdk/edge_ux/lens.html
+++ b/grapl-cdk/edge_ux/lens.html
@@ -8,17 +8,19 @@
     <meta name="description" content="spooky">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!--<link rel="manifest" href="site.webmanifest">-->
-    <!--<link rel="apple-touch-icon" href="icon.png">-->
-    <!-- Place favicon.ico in the root directory -->
-
 </head>
 
 <body>
-<h1>Lens</h1>
-<canvas id="network" width="1000" height="600"></canvas>
+    <h1 id="LensHeader">Lens</h1>
+    <div id="nodes"></div>
+    <div id="graph"></div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
-<script src="lens.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
+
+    <script src="https://unpkg.com/three"></script>
+    <script src="https://unpkg.com/three-spritetext"></script>
+    <script src="https://unpkg.com/3d-force-graph"></script>
+    <script src="https://unpkg.com/force-graph"></script>
+    <script src="lens.js"></script>
 </body>
 
