add icon to index.html

--- a/src/js/engagement_view/public/index.html
+++ b/src/js/engagement_view/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    
+    <link rel="icon" href ="./grapl_logo.png">
     <title>Grapl</title>
   </head>
   <body>
