--- a/src/js/engagement_view/public/index.html
+++ b/src/js/engagement_view/public/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./grapl_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Grapl: A Graph Analytics Platform for Detection & Response"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
@@ -24,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="icon" href ="./grapl_logo.png"></icon>
+    <link rel="icon" href ="./grapl_logo.png">
     <title>Grapl</title>
   </head>
   <body>
