--- a/src/js/engagement_view/public/index.html
+++ b/src/js/engagement_view/public/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="./grapl_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Grapl: A Graph Analytics Platform for Detection & Response"
+      content="Web site created using create-react-app"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
@@ -23,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="icon" href ="./grapl_logo.png">
+    <link rel="icon" href ="./grapl_logo.png"></icon>
     <title>Grapl</title>
   </head>
   <body>
