--- a/src/js/engagement_view/public/index.html
+++ b/src/js/engagement_view/public/index.html
@@ -9,21 +9,8 @@
       content="Grapl: A Graph Analytics Platform for Detection & Response"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="./grapl_logo.png" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <link rel="icon" href ="./grapl_logo.png">
+    <link rel="manifest" href="grapl_logo.png" />
+    <link rel="icon" href ="grapl_logo.png">
     <title>Grapl</title>
   </head>
   <body>
